<resources>
    <string name="app_name">PROG+</string>
    <string name="cadastro">cadastro</string>
    <string name="login">login</string>
    <string name="cadastrar">cadastrar</string>
    <string name="logo">logo</string>
    <string name="textview">TextView</string>
    <string name="senha">Senha</string>
    <string name="ok">OK!</string>
    <string name="email">Email</string>
    <string name="action_login">action_login</string>
    <string name="aluno">Aluno</string>
    <string name="professor">Professor</string>
    <string name="eu_sou">Eu sou</string>
    <string name="nome">Nome</string>
    <string name="matricula">Matrícula</string>
    <string name="interesse_no_curso_t_cnico_de_inform_tica">Interesse no curso Técnico de Informática</string>
</resources>